--- a/views/admin/addgame.ejs
+++ b/views/admin/addgame.ejs
@@ -334,10 +334,11 @@
                     <div>
                         <label class="form-label">Price</label>
                         <div class="relative">
-                            <span class="absolute left-3 top-2.5 text-gray-400">$</span>
+                            <span class="absolute left-3 top-2.5 text-gray-400">₹</span>
                             <input type="number" name="price" step="0.01" class="form-input pl-10" required>
                             <p class="helper-text">Set the retail price for the game</p>
                         </div>
+                        
                     </div>
                 </div>
             </div>
