--- a/views/admin/games.ejs
+++ b/views/admin/games.ejs
@@ -65,7 +65,7 @@
                   </span>
                 </td>
                 <td class="px-6 py-4 flex gap-4 items-center">
-                  <button onclick="editGame('<%= game._id %>')" class="text-gray-400 hover:text-purple-500 transition">
+                  <button onclick="editGame('<%= game._id %>')"   class="text-gray-400 hover:text-purple-500 transition">
                     <i class="fas fa-edit"></i>
                   </button>
                   <button class="status-toggle text-gray-400 <%= game.status === 'active' ? 'hover:text-red-500' : 'hover:text-green-500' %>" 
@@ -120,6 +120,10 @@
         row.style.display = title.includes(term) ? '' : 'none';
       });
     });
+
+    function editGame(id){
+      window.location.href =`/admin/editgame/${id}`;
+    }
   </script>
 </body>
 </html>
