todays final commit

--- a/views/admin/addgame.ejs
+++ b/views/admin/addgame.ejs
@@ -328,7 +328,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
                         <label class="form-label">Game Title</label>
-                        <input type="text" name="title" class="form-input" value="<%=data.title%>" >
+                        <input type="text" name="title" class="form-input"  >
                         <p class="helper-text">Enter the official title of the game</p>
                        
                         <% if (typeof errors !== 'undefined' && errors.title) { %>
