--- a/views/admin/addgame.ejs
+++ b/views/admin/addgame.ejs
@@ -328,7 +328,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div>
                         <label class="form-label">Game Title</label>
-                        <input type="text" name="title" class="form-input"  >
+                        <input type="text" name="title" class="form-input" value="<%=data.title%>">  >
                         <p class="helper-text">Enter the official title of the game</p>
                        
                         <% if (typeof errors !== 'undefined' && errors.title) { %>
@@ -493,9 +493,8 @@
                         <div>
                             <label class="form-label">Status</label>
                             <select name="status" class="form-input">
-                                <option value="available">Available</option>
-                                <option value="comingsoon">Coming Soon</option>
-                                <option value="outofstock">Out of Stock</option>
+                                <option value="active">Active</option>
+                                <option value="inactive">Inactive</option>
                             </select>
                          
                         </div>
