--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -23,6 +23,12 @@
         </div>
       <% } %>
 
+      <% if (typeof message !== 'undefined' && message) { %>
+        <div class="bg-green-900/20 border border-green-900/30 text-green-400 px-4 py-2 rounded-lg mb-6 animate-shake">
+          <%= message %>
+        </div>
+      <% } %>
+
       <!-- Sign In Form -->
       <form action="/login" method="POST" class="space-y-6">
         <!-- Email -->
